// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform record with null pending violation criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMeNoPendingViolationsWhileSupervised": {},
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionIsNotIcIn": null,
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`transform record with pending violation ineligibleCriteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionIsNotIcIn": null,
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {
    "usMeNoPendingViolationsWhileSupervised": {
      "currentStatus": "Pending Violation",
      "violationDate": 2022-07-13T00:00:00.000Z,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`transform record with restitution case 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {
      "amountOwed": 0,
    },
    "usMeSupervisionIsNotIcIn": null,
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;

exports[`transform record with restitution ineligibleCriteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMeSupervisionIsNotIcIn": null,
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {
    "usMePaidAllOwedRestitution": {
      "amountOwed": 500,
    },
  },
  "isAlmostEligible": true,
  "isEligible": false,
  "stateCode": "US_ME",
}
`;

exports[`transform record without restitution case 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "noConvictionWithin6Months": {},
    "supervisionLevelIsMediumOrLower": {
      "supervisionLevel": "MEDIUM",
    },
    "usMePaidAllOwedRestitution": {},
    "usMeSupervisionIsNotIcIn": null,
    "usMeSupervisionPastHalfFullTermReleaseDateFromProbationStart": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
    },
  },
  "externalId": "abc123",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ME",
}
`;
